Trying to add drop down menu to navbar for about tab. Having issues aligning components up with each other, like li, ul, and row heights, and not having it overflow out pof the header.

--- a/Raberstyle.css
+++ b/Raberstyle.css
@@ -7,9 +7,8 @@
 
 nav{
 	background-color: rgba(0, 0, 0, 1);
-	padding: 14px 14px 14px 0;
+	padding: 14px 14px 0px 0;
 	margin: 0;
-	overflow: hidden;
 }
 
 ul{
@@ -17,12 +16,28 @@ ul{
 }
 
 li {
+	height: 100%;
 	display: inline;
-	padding: 14px;
+	padding: 18px 14px 23px 14px;
+}
+
+.dropdown-content a:hover{
+	background-color: lightgray;
+	color: black;
+}
+
+.drop-dwn:hover .dropdown-content{
+	display: block;
 }
 
 nav li:hover{ 
 	background-color: goldenrod;
+	text-decoration: none;
+}
+
+nav a:hover{ 
+	text-decoration: none;
+	color: white;
 }
 
 li a {
@@ -32,9 +47,31 @@ li a {
 	color: white;
 }
 
+.drop-dwn{
+	position: relative;
+	display: inline-block;
+	margin: 0;
+}
+
+.dropdown-content{
+	display: none;
+	position: absolute;
+	background-color: white;
+	width: 100%;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown-content a{
+	color: black;
+	display: block;
+	text-decoration: none;
+	text-align: left;
+}
+
 h1 {
 	text-align: center;
-	margin: 14px;
+	padding-top: 14px;
 	font-size: 32px;
 	font-family: "Noto Serif Hong Kong";
 	color: white;
@@ -46,13 +83,17 @@ h2, h3, h4 {
 }
 
 #nav-links{
-	position: relative;
-	top: 20px;
+	display: inline;
+	padding-top: 3px;
 }
 
 #social-media{
-	margin: 0 0 0 0px;
+	margin: 0 0 0px 0px;
 	display: inline-block;
+}
+
+#social-media li{
+	padding: 14px;
 }
 
 .logo-image{
@@ -171,6 +212,18 @@ h2, h3, h4 {
 	border-radius: 50%;
 }
 
+#carrot{
+	font-size: 16px;
+	padding: 14px;
+	width: 0;
+}
+
+i #carrot{
+	font-size: 16px;
+	padding: 14px;
+	width: 0;
+
+}
 
 .fa:hover{
 	opacity: 0.7;
@@ -378,6 +431,7 @@ footer h4{
 
 footer li{
 	display: block;
+	padding: 14px;
 }
 
 aside{
